[BugFix] Fix low-cardinality rewrite NPE caused by shared DecodeInfo (#68799)
Signed-off-by: stephen <stephen5217@163.com>
(cherry picked from commit 31afe19e0cc90fc42ead25c6724a8997c2f4c53c)

# Conflicts:
#	fe/fe-core/src/main/java/com/starrocks/sql/optimizer/rule/tree/lowcardinality/DecodeCollector.java
#	fe/fe-core/src/main/java/com/starrocks/sql/optimizer/rule/tree/lowcardinality/DecodeRewriter.java
#	fe/fe-core/src/test/java/com/starrocks/sql/plan/LowCardinalityTest2.java